Osnovne stvari gui skoraj dokončal
Osnovne stvari, kot so razne vrstice in meniji skoraj dokoncal, sledi
povezava logike z gui.